# skill-sync-gui-rust

./: .gitignore  README.md  README_CN.md  package-lock.json  package.json  tsconfig.base.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/backend/: api.rs  config.rs  detector.rs  mod.rs  models.rs  skill_repo.rs  sync_service.rs  util.rs
web/: index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
web/e2e/: app.spec.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: Layout.tsx  SkillPreviewModal.tsx  Toast.tsx
web/src/lib/: api.ts
web/src/pages/: Dashboard.tsx  Settings.tsx  Skills.tsx  Tools.tsx  ToolsModal.tsx  ToolsStack.tsx  ToolsTab.tsx
web/src/store/: index.ts
