[package]
name = "skill-sync-gui-rust"
version = "0.1.0"
description = "Skill Sync GUI Rust single-file edition"
authors = ["skill-sync"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
walkdir = "2"
dirs = "6"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
percent-encoding = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
